# ash-examples

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  compile_shaders.sh  run_no_validation.sh
compiled_shaders/: shader.spv
shaders/: frag.spv  shader.spv  vert.spv
shaders/bullets/: frag.spv  vert.spv
shaders/compute/: shader.spv
shaders/player/: vert.spv
shaders/projectiles/: vert.spv
src/: allocator.rs  allocator2.rs  app.rs  command_pool.rs  constant_buffers.rs  create_objs.rs  descriptor_sets.rs  device_destroyable.rs  entry.rs  errors.rs  ferris.rs  gpu_data.rs  image.rs  instance.rs  logical_device.rs  main.rs  physical_device.rs  pipeline.rs  pipeline_cache.rs  player.rs  player_sprite.rs  render_pass.rs  renderer.rs  utility.rs  validation_layers.rs  vertex.rs
src/allocator/: debug_logging.rs  device_buffer_init.rs  logging.rs  mem_type_assignment.rs  memory_bound.rs  mod.rs  staging_buffers.rs
src/allocator2/: debug_logging.rs  mod.rs
src/command_pools/: compute.rs  graphics.rs  mod.rs  transfer.rs
src/command_pools/initialization/: mod.rs
src/device/: device_selector.rs  logical_device.rs  mod.rs  physical_device.rs  queues.rs  vendor.rs
src/initialization/: instance.rs  mod.rs  validation_layers.rs
src/initialization/device/: device_selector.rs  logical_device.rs  mod.rs  physical_device.rs  queues.rs
src/physical_device/: mod.rs  queue_families.rs  vendor.rs
src/pipelines/: cache.rs  compute.rs  graphics.rs  mod.rs
src/render/: allocations.rs  allocator.rs  common_object_creations.rs  compute_data.rs  constant_data.rs  create_objs.rs  descriptor_sets.rs  device_destroyable.rs  engine.rs  errors.rs  format_conversions.rs  frame.rs  gpu_data.rs  instance.rs  mod.rs  push_constants.rs  render.rs  render_object.rs  render_pass.rs  render_targets.rs  renderer.rs  screenshot_buffer.rs  sprites.rs  swapchain.rs  sync_renderer.rs  texture.rs  validation_layers.rs  vertex.rs  windowed_renderer.rs
src/render/allocator/: device_buffer_init.rs  logging.rs  memory_bound.rs  mod.rs  staging_buffers.rs
src/render/command_pools/: compute.rs  graphics.rs  mod.rs  temporary_graphics.rs  transfer.rs
src/render/data/: compute.rs  constant.rs  ferris_model.rs  mod.rs  texture.rs  (+2 more)
src/shaders/: mod.rs  shader.frag  shader.glsl  shader.rs  shader.vert
src/vertices/: mod.rs  vertex.rs
(+70 files in other folders)
