[package]
name = "ash-by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.38", default-features = false, features = ["debug"]}
ash-window = "0.13.0"
# version depends on ash-window
raw-window-handle = "0.6.0"

winit = {version = "0.29.10", default-features = false, features = ["rwh_06", "x11", "wayland", "wayland-dlopen", "wayland-csd-adwaita"]}
image = "0.25.1"

log = {version = "0.4"}
env_logger = "0.11.0"
thiserror = "1"


[features]
"default" = ["load", "vl"]
"load" = ["ash/loaded"]
"link" = ["ash/linked"]
"vl" = []
