[package]
name = "ash-by-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.38", default-features = false, features = ["debug"]}
log = {version = "0.4"}
env_logger = "0.11.0"
image = "0.24.8"
thiserror = "1.0.64"

[features]
"default" = ["load", "vl", "graphics_family", "transfer_family", "log_alloc"]
"load" = ["ash/loaded"]
"link" = ["ash/linked"]
"vl" = []
"graphics_family" = []
"compute_family" = []
"transfer_family" = []
"log_alloc" = ["ash/debug"] # log extended allocation info to debug or error streams
